syntax = "proto3";

package platform.server.v1;

option go_package = "github.com/home-cloud-io/core/api/platform/server/v1";

service WebService {
  rpc ShutdownHost(ShutdownHostRequest) returns (ShutdownHostResponse) {}
  rpc RestartHost(RestartHostRequest) returns (RestartHostResponse) {}
  rpc InstallApp(InstallAppRequest) returns (InstallAppResponse) {}
  rpc DeleteApp(DeleteAppRequest) returns (DeleteAppResponse) {}
  rpc UpdateApp(UpdateAppRequest) returns (UpdateAppResponse) {}
  rpc CheckForSystemUpdates(CheckForSystemUpdatesRequest) returns (CheckForSystemUpdatesResponse) {}
}

message ShutdownHostRequest {}

message ShutdownHostResponse {}

message RestartHostRequest {}

message RestartHostResponse {}

message InstallAppRequest {
  string chart = 1;
  string repo = 2;
  string release = 3;
  string values = 4;
  string version = 5;
}

message InstallAppResponse {}

message DeleteAppRequest {
  string release = 1;
}

message DeleteAppResponse {}

message UpdateAppRequest {
  string chart = 1;
  string repo = 2;
  string release = 3;
  string values = 4;
  string version = 5;
}

message UpdateAppResponse {}

message CheckForSystemUpdatesRequest {}

message CheckForSystemUpdatesResponse {
  DaemonVersions daemon_versions = 1;
  // os_diff is the result of the `nvd diff` command
  string os_diff = 2;
}

message DaemonVersions {
  string current = 1;
  string latest = 2;
}
